# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../common/config/common.gni")

config("edm_plugin_config") {
  cflags = [
    "-Wno-error=implicit-fallthrough",
    "-fvisibility=hidden",
  ]
  include_dirs = [
    "./include",
    "./include/account_manager",
    "./include/admin_manager",
    "./include/application_manager",
    "./include/bluetooth_manager",
    "./include/browser",
    "./include/bundle_manager",
    "./include/datetime_manager",
    "./include/device_control",
    "./include/device_info",
    "./include/device_settings",
    "./include/location_manager",
    "./include/network_manager",
    "./include/restrictions",
    "./include/security_manager",
    "./include/system_manager",
    "./include/telephony_manager",
    "./include/usb_manager",
    "./include/wifi_manager",
    "./include/network",
    "./include/network/executer",
    "./include/network/rule",
    "./include/utils",
  ]
}

ohos_shared_library("device_core_plugin") {
  sources = [
    "./src/utils/installer_callback.cpp",
    "./src/utils/uninstall_param_serializer.cpp",
  ]

  public_configs = [
    ":edm_plugin_config",
    "../../common/config:coverage_flags",
  ]

  defines = []

  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
    print("defines _ARM64_")
  }

  if (target_cpu == "x86_64") {
    defines += [ "_X86_64_" ]
    print("defines _X86_64_")
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libprivacy_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "file_api:securitylabel",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "window_manager:libwm",
    "window_manager:session_manager_lite",
    "window_manager:sms",
  ]

  if (enterprise_device_management_support_all) {
    defines += [ "EDM_SUPPORT_ALL_ENABLE" ]
    sources += [
      "./src/bundle_manager/allowed_app_distribution_types_plugin.cpp",
      "./src/restrictions/allowed_collaboration_service_bundles_plugin.cpp",
      "./src/bundle_manager/allowed_install_bundles_plugin.cpp",
      "./src/bundle_manager/bundle_install_plugin.cpp",
      "./src/restrictions/disable_camera_plugin.cpp",
      "./src/restrictions/disable_hdc_plugin.cpp",
      "./src/restrictions/disable_app_clone_plugin.cpp",
      "./src/restrictions/disable_maintenance_mode_plugin.cpp",
      "./src/restrictions/disable_mtp_server_plugin.cpp",
      "./src/restrictions/disable_printer_plugin.cpp",
      "./src/datetime_manager/disallow_modify_datetime_plugin.cpp",
      "./src/restrictions/disallow_unmute_device_plugin.cpp",
      "./src/restrictions/disallow_virtual_service_plugin.cpp",
      "./src/restrictions/disable_set_biometrics_and_screenLock_plugin.cpp",
      "./src/restrictions/disable_set_device_name_plugin.cpp",
      "./src/restrictions/disallow_distributed_transmission_plugin.cpp",
      "./src/restrictions/disallow_distributed_transmission_full_plugin.cpp",
      "./src/bundle_manager/disallowed_install_bundles_plugin.cpp",
      "./src/bundle_manager/disallowed_uninstall_bundles_plugin.cpp",
      "./src/restrictions/inactive_user_freeze_plugin.cpp",
      "./src/bundle_manager/install_plugin.cpp",
      "./src/bundle_manager/installed_bundle_info_list_plugin.cpp",
      "./src/application_manager/kiosk_feature_plugin.cpp",
      "./src/datetime_manager/ntp_server_plugin.cpp",
      "./src/device_settings/power_policy_plugin.cpp",
      "./src/device_settings/screen_off_time_plugin.cpp",
      "./src/application_manager/set_ability_disable_plugin.cpp",
      "./src/device_settings/set_eye_comfort_mode_plugin.cpp",
      "./src/device_settings/set_device_name_plugin.cpp",
      "./src/security_manager/snapshot_skip_plugin.cpp",
      "./src/bundle_manager/uninstall_plugin.cpp",
      "./src/utils/allowed_app_distribution_types_utils.cpp",
      "./src/utils/battery_utils.cpp",
      "./src/application_manager/set_allowed_kiosk_apps_plugin.cpp",
      "./src/bundle_manager/install_enterprise_re_signature_certificate_plugin.cpp",
      "../../interfaces/inner_api/application_manager/src/window_state_info.cpp",
      "./src/application_manager/get_application_window_states_plugin.cpp",
    ]

    if (enterprise_device_management_feature_pc_only) {
      sources += [
      "./src/restrictions/disallow_export_recovery_key_plugin.cpp",
      "./src/restrictions/disallow_open_file_boost_plugin.cpp",
      "./src/restrictions/disallowed_nearlink_protocols_plugin.cpp",
      "./src/bundle_manager/install_local_enterprise_app_enabled_for_account_plugin.cpp",
      "./src/utils/nearlink_config_utils.cpp",
      "./src/utils/nearlink_protocol_utils.cpp",
      "./src/restrictions/disallow_core_dump_plugin.cpp",
      ]
    }

    if (os_account_edm_enable) {
      external_deps += [
        "graphic_2d:librender_service_base",
        "graphic_2d:librender_service_client",
        "os_account:libaccountkits",
        "os_account:os_account_innerkits",
        "window_manager:libdm"
      ]
      sources += [
        "./src/account_manager/add_os_account_plugin.cpp",
        "./src/restrictions/disable_mtp_client_plugin.cpp",
        "./src/restrictions/disable_print_plugin.cpp",
        "./src/restrictions/disable_user_mtp_client_plugin.cpp",
        "./src/account_manager/disallow_add_local_account_plugin.cpp",
        "./src/account_manager/disallow_add_os_account_by_user_plugin.cpp",
        "./src/security_manager/set_watermark_image_plugin.cpp",
        "./src/device_settings/set_screen_watermark_image_plugin.cpp",
        "./src/restrictions/disallow_modify_wallpaper_plugin.cpp",
      ]
      defines += [ "OS_ACCOUNT_EDM_ENABLE" ]
    }

    if (os_account_edm_enable && enterprise_device_management_feature_pc_only) {
      external_deps += [ "os_account:domain_account_innerkits" ]
      sources += [
        "./src/account_manager/set_domain_account_policy_plugin.cpp",
        "./src/restrictions/disable_sudo_plugin.cpp",
        "./src/restrictions/disallowed_device_sudo_plugin.cpp",
        "./src/restrictions/disallowed_usb_storage_device_write_plugin.cpp",
        "./src/utils/array_usb_device_type_serializer.cpp",
      ]
      defines += [
        "SUDO_EDM_ENABLE",
        "FEATURE_PC_ONLY"
      ]
      external_deps += [ "usb_manager:usbsrv_client" ]
    }

    if (enterprise_device_management_feature_pc_only) {
      sources += [
        "./src/device_settings/set_auto_unlock_after_reboot_plugin.cpp",
        "./src/bundle_manager/install_local_enterprise_app_enabled_plugin.cpp",
        "./src/restrictions/disable_hdc_remote_plugin.cpp",
        "./src/restrictions/disable_running_binary_app_plugin.cpp",
      ]
    }

    if (audio_framework_edm_enable) {
      external_deps += [ "audio_framework:audio_client" ]
      sources += [ "./src/restrictions/disable_microphone_plugin.cpp" ]
    }

    if (bluetooth_edm_enable) {
      sources += [
        "./src/bluetooth_manager/allowed_bluetooth_devices_plugin.cpp",
        "./src/bluetooth_manager/disable_bluetooth_plugin.cpp",
        "./src/bluetooth_manager/disallowed_bluetooth_devices_plugin.cpp",
        "./src/bluetooth_manager/disallowed_bluetooth_protocols_plugin.cpp",
        "./src/bluetooth_manager/get_bluetooth_info_plugin.cpp",
        "./src/bluetooth_manager/switch_bluetooth_plugin.cpp",
      ]
    }

    if (power_manager_edm_enable) {
      external_deps += [ "power_manager:powermgr_client" ]
      sources += [
        "./src/device_control/reboot_plugin.cpp",
        "./src/device_control/shutdown_plugin.cpp",
      ]
    }

    if (screenlock_mgr_edm_enable) {
      external_deps += [ "screenlock_mgr:screenlock_client" ]
      sources += [ "./src/device_control/lock_screen_plugin.cpp" ]
    }

    if (screenlock_mgr_edm_enable && !enterprise_device_management_feature_pc_only) {
      sources += [ "./src/device_settings/disable_screen_lock_plugin.cpp" ]
    }

    if (!enterprise_device_management_feature_pc_only) {
      sources += [
        "./src/restrictions/disable_backup_and_restore_plugin.cpp",
        "./src/restrictions/disable_private_space_plugin.cpp",
        "./src/restrictions/disallow_multi_window_plugin.cpp",
        "./src/device_settings/set_floating_navigation_plugin.cpp",
      ]
    }

    if (enterprise_device_management_feature_charging_type_setting) {
      defines += [ "FEATURE_CHARGING_TYPE_SETTING" ]
    }

    if (power_manager_edm_enable && !enterprise_device_management_feature_pc_only) {
      sources += [ "./src/restrictions/disallow_power_long_press_plugin.cpp" ]
    }

    if (inputmethod_imf_enable) {
      external_deps += [ "imf:inputmethod_client" ]
      sources += [ "./src/device_settings/set_default_input_method_plugin.cpp" ]
    }
  }

  deps = [
    "../../common/external:edm_external_adapters",
    "../../common/native:edm_commom",
    "../../interfaces/inner_api:edmservice_kits",
    "../../interfaces/inner_api/plugin_kits:plugin_kits",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "edm_plugin"
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_shared_library("communication_plugin") {
  sources = []

  public_configs = [
    ":edm_plugin_config",
    "../../common/config:coverage_flags",
  ]

  defines = []

  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
    print("defines _ARM64_")
  }

  if (target_cpu == "x86_64") {
    defines += [ "_X86_64_" ]
    print("defines _X86_64_")
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "file_api:securitylabel",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "window_manager:libwm",
    "window_manager:sms",
  ]

  if (enterprise_device_management_support_all) {
    sources += [ "./src/restrictions/disallowed_tethering_plugin.cpp" ]
    defines += [ "EDM_SUPPORT_ALL_ENABLE" ]
    if (wifi_edm_enable) {
      external_deps += [ "wifi:wifi_sdk" ]
      sources += [
        "./src/wifi_manager/allowed_wifi_list_plugin.cpp",
        "./src/wifi_manager/disallowed_wifi_list_plugin.cpp",
        "./src/wifi_manager/is_wifi_active_plugin.cpp",
        "./src/wifi_manager/set_wifi_disabled_plugin.cpp",
        "./src/wifi_manager/set_wifi_profile_plugin.cpp",
        "./src/wifi_manager/switch_wifi_plugin.cpp",
        "./src/utils/wifi_device_config_serializer.cpp",
        "./src/utils/wifi_policy_utils.cpp",
        "./src/restrictions/disallowed_p2p_plugin.cpp",
        "./src/restrictions/disallow_random_mac_address_plugin.cpp",
      ]
      defines += [ "WIFI_EDM_ENABLE" ]
    }

    if (!enterprise_device_management_feature_pc_only &&
        cellular_data_edm_enable && telephony_core_edm_enable) {
      external_deps += [
        "call_manager:tel_call_manager_api",
        "cellular_data:tel_cellular_data_api",
        "core_service:tel_core_service_api",
        "data_share:datashare_consumer",
        "telephony_data:tel_telephony_data",
      ]
      sources += [
        "./src/telephony_manager/active_sim_plugin.cpp",
        "./src/restrictions/disallow_mobile_data_plugin.cpp",
        "./src/restrictions/disallow_modify_apn_plugin.cpp",
        "./src/restrictions/disallowed_sim_plugin.cpp",
        "./src/restrictions/disallowed_telephony_call_plugin.cpp",
        "./src/telephony_manager/telephony_call_policy_plugin.cpp",
        "./src/network_manager/set_apn_plugin.cpp",
        "./src/network_manager/set_default_data_sim_plugin.cpp",
        "./src/network_manager/turnonoff_mobile_data_plugin.cpp",
        "./src/utils/apn_utils.cpp",
        "./src/telephony_manager/hang_up_calling_plugin.cpp",
      ]
      defines += [
        "CELLULAR_DATA_EDM_ENABLE",
        "TELEPHONY_EDM_ENABLE",
      ]
    }

    if (enterprise_device_management_feature_pc_only) {
      sources += [
        "./src/restrictions/disable_samba_client_plugin.cpp",
        "./src/restrictions/disable_samba_server_plugin.cpp",
        "./src/restrictions/disallow_modify_ethernet_ip_plugin.cpp",
      ]
      defines += [ "FEATURE_PC_ONLY" ]
    }

    if (netmanager_base_edm_enable) {
      defines += [ "NET_MANAGER_BASE_EDM_ENABLE" ]
      external_deps += [
        "netmanager_base:net_conn_manager_if",
        "netmanager_base:net_conn_parcel",
        "netmanager_base:net_policy_manager_if",
        "netmanager_base:net_stats_manager_if",
        "netmanager_base:netsys_controller",
      ]
      sources += [
        "./src/network_manager/disabled_network_interface_plugin.cpp",
        "./src/restrictions/disallowed_airplane_mode_plugin.cpp",
        "./src/network_manager/domain_filter_rule_plugin.cpp",
        "./src/network_manager/firewall_rule_plugin.cpp",
        "./src/network_manager/global_proxy_plugin.cpp",
        "./src/network_manager/iptables_rule_plugin.cpp",
        "./src/application_manager/query_traffic_stats_plugin.cpp",
        "./src/device_settings/set_network_interface_config_plugin.cpp",
        "./src/network/executer/domain_executer.cpp",
        "./src/network/executer/executer_factory.cpp",
        "./src/network/executer/executer_utils.cpp",
        "./src/network/executer/firewall_executer.cpp",
        "./src/network/executer/iexecuter.cpp",
        "./src/network/executer/iptables_factory.cpp",
        "./src/network/iptables_manager.cpp",
        "./src/network/ipv4tables_manager.cpp",
        "./src/network/ipv6tables_manager.cpp",
        "./src/network/rule/chain_rule.cpp",
        "./src/network/rule/domain_chain_rule.cpp",
        "./src/network/rule/firewall_chain_rule.cpp",
        "./src/network/rule/rule_utils.cpp",
        "./src/utils/domain_filter_rule_serializer.cpp",
        "./src/utils/firewall_rule_serializer.cpp",
        "./src/utils/http_proxy_serializer.cpp",
      ]
    }

    if (netmanager_ext_edm_enable) {
      external_deps += [
        "netmanager_ext:ethernet_manager_if",
        "netmanager_ext:net_vpn_manager_if",
      ]
      sources += [
        "./src/network_manager/get_all_network_interfaces_plugin.cpp",
        "./src/network_manager/get_ip_or_mac_address_plugin.cpp",
        "./src/restrictions/disallow_vpn_plugin.cpp"
      ]
    }

    if (drivers_interface_usb_edm_enable && usb_manager_edm_enable) {
      external_deps += [ "usb_manager:usbsrv_client" ]
      sources += [
        "./src/usb_manager/allowed_usb_devices_plugin.cpp",
        "./src/restrictions/disable_usb_plugin.cpp",
        "./src/usb_manager/disallowed_usb_devices_plugin.cpp",
        "./src/restrictions/disallow_usb_serial_plugin.cpp",
        "./src/utils/array_usb_device_type_serializer.cpp",
        "./src/utils/usb_policy_utils.cpp",
      ]
    }

    if (storage_service_edm_enable) {
      external_deps += [ "storage_service:storage_manager_sa_proxy" ]
      sources += [ "./src/restrictions/disallow_external_storage_card_plugin.cpp" ]
      defines += [ "EXTERNAL_STORAGE_SERVICE_EDM_ENABLE" ]
    }

    if (os_account_edm_enable) {
      external_deps += [
        "os_account:domain_account_innerkits",
        "os_account:os_account_innerkits",
      ]
      defines += [ "OS_ACCOUNT_EDM_ENABLE" ]
    }

    if (drivers_interface_usb_edm_enable && storage_service_edm_enable &&
        usb_manager_edm_enable) {
      external_deps += [ "storage_service:storage_manager_sa_proxy" ]
      sources += [ "./src/usb_manager/usb_read_only_plugin.cpp" ]
      defines += [ "USB_STORAGE_SERVICE_EDM_ENABLE" ]
    }

    if (common_event_service_edm_enable) {
      external_deps += [ "common_event_service:cesfwk_innerkits" ]
      sources += [
        "./src/browser/managed_browser_policy_plugin.cpp",
        "./src/browser/set_browser_policies_plugin.cpp",
        "./src/utils/managed_browser_policy_serializer.cpp",
      ]
      defines += [ "COMMON_EVENT_SERVICE_EDM_ENABLE" ]
    }

    if (!enterprise_device_management_feature_pc_only) {
      external_deps += [ 
        "ability_runtime:ability_manager"
        ]
      sources += [
        "./src/restrictions/disallowed_mms_plugin.cpp",
        "./src/restrictions/disallowed_sms_plugin.cpp",
      ]
    }

    if (uinput_manager_edm_enable) {
      external_deps += [ "input:libmmi-client" ]
      sources += [
        "./src/restrictions/disallow_uinput_plugin.cpp",
      ]
      defines += [ "UINPUT_MANAGER_EDM_ENABLE" ]
    }
  }

  deps = [
    "../../common/external:edm_external_adapters",
    "../../common/native:edm_commom",
    "../../interfaces/inner_api:edmservice_kits",
    "../../interfaces/inner_api/plugin_kits:plugin_kits",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "edm_plugin"
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_shared_library("sys_service_plugin") {
  sources = []
  public_configs = [
    ":edm_plugin_config",
    "../../common/config:coverage_flags",
  ]

  defines = []

  use_exceptions = true

  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
    print("defines _ARM64_")
  }

  if (target_cpu == "x86_64") {
    defines += [ "_X86_64_" ]
    print("defines _X86_64_")
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_core",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "file_api:securitylabel",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "telephony_data:tel_telephony_data",
    "window_manager:libwm",
    "window_manager:sms",
    "window_manager:session_manager_lite",
  ]

  if (enterprise_device_management_support_all) {
    sources += [
      "./src/application_manager/allowed_notification_bundles_plugin.cpp",
      "./src/application_manager/clear_up_application_data_plugin.cpp",
      "./src/utils/clear_up_application_data_param_serializer.cpp",
      "./src/application_manager/manage_user_non_stop_apps_plugin.cpp",
    ]
    defines += [ "EDM_SUPPORT_ALL_ENABLE" ]
    if (update_service_edm_enable) {
      external_deps += [ "update_service:updateservicekits" ]
      sources += [ "./src/device_control/reset_factory_plugin.cpp" ]
    }

    if (ability_runtime_edm_enable) {
      external_deps += [
        "ability_runtime:ability_manager",
        "resource_schedule_service:ressched_client"
      ]
      sources += [
        "./src/application_manager/allowed_running_bundles_plugin.cpp",
        "./src/application_manager/disallowed_running_bundles_plugin.cpp",
        "./src/application_manager/manage_auto_start_apps_plugin.cpp",
        "./src/application_manager/manage_freeze_exempted_apps_plugin.cpp",
        "./src/application_manager/manage_keep_alive_apps_plugin.cpp",
        "./src/utils/bms_utils.cpp",
        "./src/utils/manage_keep_alive_apps_info.cpp",
        "./src/utils/manage_auto_start_app_info.cpp",
        "./src/utils/manage_auto_start_apps_serializer.cpp",
        "./src/utils/manage_keep_alive_apps_serializer.cpp",
      ]
    }

    if (certificate_manager_edm_enable) {
      external_deps += [ "certificate_manager:cert_manager_sdk" ]
      sources += [ "./src/device_settings/user_cert_plugin.cpp" ]
    }

    if (pasteboard_edm_enable) {
      external_deps += [
        "pasteboard:pasteboard_client",
        "udmf:udmf_client",
      ]
      defines += [ "PASTEBOARD_EDM_ENABLE" ]
      sources += [ "./src/application_manager/clipboard_policy_plugin.cpp" ]
    }

    sources += [
      "./src/security_manager/set_permission_managed_state_plugin.cpp",
      "./src/utils/permission_managed_state_serializer.cpp"
    ]

    if (useriam_edm_enable) {
      external_deps += [ "user_auth_framework:userauth_client" ]
      defines += [ "USERIAM_EDM_ENABLE" ]
      sources += [
        "./src/restrictions/fingerprint_auth_plugin.cpp",
        "./src/security_manager/password_policy_plugin.cpp",
      ]
    }

    if (location_edm_enable) {
      external_deps += [ "location:locator_sdk" ]
      sources += [ "./src/location_manager/location_policy_plugin.cpp" ]
    }

    if (time_service_edm_enable) {
      external_deps += [ "time_service:time_client" ]
      sources += [ "./src/datetime_manager/set_datetime_plugin.cpp" ]
    }

    if (notification_edm_enable) {
        sources += [ "./src/restrictions/disallowed_notification_plugin.cpp" ]
    }
  }
  deps = [
    "../../common/external:edm_external_adapters",
    "../../common/native:edm_commom",
    "../../interfaces/inner_api:edmservice_kits",
    "../../interfaces/inner_api/plugin_kits:plugin_kits",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "edm_plugin"
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_shared_library("need_extra_plugin") {
  sources = [
    "./src/utils/operate_device_param_serializer.cpp",
    "./src/utils/uninstall_param_serializer.cpp",
  ]
  public_configs = [
    ":edm_plugin_config",
    "../../common/config:coverage_flags",
  ]

  defines = []

  if (target_cpu == "arm64") {
    defines += [ "_ARM64_" ]
    print("defines _ARM64_")
  }

  if (target_cpu == "x86_64") {
    defines += [ "_X86_64_" ]
    print("defines _X86_64_")
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "cJSON:cjson",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "window_manager:libwm",
    "window_manager:sms",
    "wifi:wifi_sdk"
  ]

  if (enterprise_device_management_support_all) {
    defines += [ "EDM_SUPPORT_ALL_ENABLE" ]
    sources += [
      "./src/admin_manager/enable_self_device_admin_plugin.cpp",
      "./src/device_info/get_device_info_plugin.cpp",
      "./src/device_info/get_ext_info_plugin.cpp",
      "./src/bundle_manager/install_market_apps_plugin.cpp",
      "./src/system_manager/notify_update_packages_plugin.cpp",
      "./src/system_manager/set_update_policy_plugin.cpp",
      "./src/device_settings/set_wall_paper_plugin.cpp",
      "./src/device_settings/set_switch_status_plugin.cpp",
    ]
  }

  if (!enterprise_device_management_feature_pc_only) {
      sources += [
        "./src/device_settings/set_key_code_plugin.cpp",
        "./src/device_settings/hidden_settings_menu_plugin.cpp",
      ]
    }
  
  if (nfc_edm_enable) {
    external_deps += ["nfc:nfc_inner_kits_controller"]
    defines += [ "NFC_EDM_ENABLE" ]
  }

  if (enterprise_device_management_feature_pc_only) {
      sources += [
        "./src/restrictions/disable_activation_lock_plugin.cpp",
        "./src/application_manager/add_dock_app_plugin.cpp",
      ]
    }

  if (power_manager_edm_enable && screenlock_mgr_edm_enable &&
      update_service_edm_enable) {
    external_deps += [
      "power_manager:powermgr_client",
      "screenlock_mgr:screenlock_client",
      "update_service:updateservicekits",
    ]
    sources += [ "./src/device_control/operate_device_plugin.cpp" ]
  }

  if (telephony_core_edm_enable) {
    external_deps += [ "core_service:tel_core_service_api" ]
    defines += [ "TELEPHONY_CORE_EDM_ENABLE" ]
  }

  deps = [
    "../../common/external:edm_external_adapters",
    "../../common/native:edm_commom",
    "../../interfaces/inner_api:edmservice_kits",
    "../../interfaces/inner_api/plugin_kits:plugin_kits",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  relative_install_dir = "edm_plugin"
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

