# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

template("edm_plugin_shared_library") {
  ohos_shared_library("${target_name}") {
    forward_variables_from(invoker, "*")

    include_dirs += [
      "//base/customization/enterprise_device_management/services/edm/include",
      "//base/customization/enterprise_device_management/interfaces/inner_api/common/include",
      "//base/customization/enterprise_device_management/services/edm/include/utils",
      "//base/customization/enterprise_device_management/services/edm_plugin/include",
      "//third_party/jsoncpp/include",
    ]
    if (defined(invoker.include_dirs)) {
      include_dirs += invoker.include_dirs
    }

    if (defined(invoker.public_configs)) {
      public_configs += invoker.public_configs
    }

    if (!defined(deps)) {
      deps = []
    }
    deps += [ "//base/customization/enterprise_device_management/services/edm:edmservice" ]

    if (defined(invoker.deps)) {
      deps += invoker.deps
    }

    if (defined(invoker.external_deps)) {
      external_deps += invoker.external_deps
    }

    if (is_standard_system) {
      external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
    } else {
      external_deps += [ "hilog:libhilog" ]
    }

    relative_install_dir = "edm_plugin"
    subsystem_name = "customization"
    part_name = "enterprise_device_management"
  }
}
